--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,9 @@
 $bg-color: #1f1f47;
 $primary-color: #1b1837;
-$accent-color: #6ecadf;
+$accent-color: #4895ef;
 $secondary-color: #7f4bf6;
 $text-color: #edf6f9;
+$text-color2: #6ecadf;
+
+$border: inset 0.5px 0.5px rgba(237, 246, 249, 0.5),
+  inset -0.5px -0.5px rgba(237, 246, 249, 0.5);
