--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,17 +1,38 @@
 html {
-  font-size: 100%;
+  font-size: 70%;
   box-sizing: border-box;
+
+  @include breakpoint-up("tablet-portrait-up") {
+    font-size: 100%;
+  }
 }
 *,
 *::after,
 *::before {
   box-sizing: inherit;
 }
+*,
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: "Roboto", sans-serif;
+  color: $text-color;
   background-color: $bg-color;
+  padding: 2.5em 1.9em 0em;
+
+  @include breakpoint-up("tablet-portrait-up") {
+    padding: 1em 1.9em 0em;
+  }
 }
 a {
   text-decoration: none;
   color: $text-color;
+  cursor: pointer;
+}
+.btn {
+  background: $accent-color;
+  border-radius: 10px;
+  padding: 1em 3.125em;
 }
