--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -58,10 +58,13 @@ h1 {
 }
 
 h2 {
-  font-size: 24px; //38px  40px
+  font-size: 1.5rem; //38px  40px
 
   @include breakpoint-up(tablet-portrait-up) {
-    font-size: 40px;
+    font-size: 2.375rem;
+  }
+  @include breakpoint-up(tablet-portrait-up) {
+    font-size: 2.5rem;
   }
 }
 
@@ -84,4 +87,10 @@ p {
 
 .caption-text {
   font-size: 15px;
+}
+.body-intro-text {
+  font-size: 18px;
+}
+.flex {
+  display: flex;
 }
