--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 $bg-color: #1f1f47;
 $primary-color: #1b1837;
-$accent-color: #4cc9f0;
+$accent-color: #4895ef; //#4cc9f0;
 $secondary-color: #7f4bf6;
 $text-color: #edf6f9;
 $text-color2: #6ecadf;
