--- a/scss/_mission.scss
+++ b/scss/_mission.scss
@@ -26,6 +26,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     row-gap: 1.875rem;
 
     &__item {
@@ -33,14 +34,17 @@
       border-radius: 10px;
       box-shadow: inset 0.5px 0.5px $secondary-color,
         inset -0.5px -0.5px $secondary-color;
-      padding-top: 1.8em;
+      padding: 1.8em;
+      max-width: 550px;
+      width: 100%;
+      margin: 0;
 
       .number {
         font-size: 1.5rem;
         border-radius: 50%;
         background-color: $secondary-color;
-        width: 34px;
-        max-width: 100%;
+        width: 100%;
+        flex-basis: 40px;
         height: 34px;
         display: flex;
         justify-content: center;
@@ -48,8 +52,8 @@
         margin-right: 1.25rem;
 
         @include breakpoint-up(tablet-landscape-up) {
-          width: 40px;
-          height: 40px;
+          // width: 40px;
+          // height: 40px;
         }
       }
 
