--- a/app/scss/components/_index.scss
+++ b/app/scss/components/_index.scss
@@ -2,6 +2,7 @@
 @forward "container";
 @forward "btn";
 @forward "guide";
+@forward "loading";
 @forward "list";
 @forward "mockups";
 @forward "path";
