--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -65,33 +65,67 @@
 
       &__result {
         position: absolute;
-        left: 0;
         right: 0;
         margin: 10px 2em;
+        width: -webkit-fill-available;
         height: 300px;
         background-color: var(--primary-color);
         border-radius: 10px;
         box-shadow: var(--border);
         padding: 16px 14px;
-        overflow-y: scroll;
+        overflow-y: auto;
         z-index: 1;
+        display: none;
 
-        li {
-          padding: 1rem 14px;
-          // width: 98%;
+        &::-webkit-scrollbar {
+          width: 10px;
         }
 
-        li:not(:last-child) {
-          box-shadow: inset 0px -0.5px rgba(237, 246, 249, 0.5);
+        &::-webkit-scrollbar-track {
+          background-color: var(--secondary-color);
+          opacity: 0.2;
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
+        }
+        &::-webkit-scrollbar-thumb {
+          background-color: var(--bg-color);
+          // outline: 1px solid var(--accent-color);
+          border-radius: 10px;
+          border: 3px solid var(--secondary-color);
+        }
+
+        &__item {
+          padding: 1rem 4px;
+          // width: 98%;
+
+          &__title {
+            display: block;
+            text-transform: capitalize;
+            font-weight: 500;
+            font-size: 18px;
+            color: var(--text-color2);
+            margin: 10px 0;
+          }
+
+          &__description {
+            display: block;
+            line-height: 1.8;
+            font-size: 12px;
+            color: var(--text-color);
+            text-align: justify;
+          }
+
+          &:not(:last-child) {
+            box-shadow: inset 0px -0.5px rgba(237, 246, 249, 0.5);
+          }
+        }
+
+        &__no-match {
+          display: flex;
+          justify-content: center;
+          color: var(--text-color2);
         }
       }
-
-      // background-color: var(--primary-color);
-      // border-radius: 10px;
-      // box-shadow: var(--border);
-      // height: 50px;
-      // display: flex;
-      // padding: 16px 14px;
 
       @include u.breakpoint-up("tablet-landscape-up") {
         flex: unset;
@@ -115,6 +149,7 @@
     }
 
     .menu-list {
+      position: relative;
       max-width: 200px;
       width: 100%;
       visibility: hidden;
@@ -189,6 +224,7 @@
 
           [type="text"] {
             background: transparent;
+            color: var(--text-color);
             border: none;
             outline: none;
             max-width: 0;
@@ -199,6 +235,16 @@
           }
         }
       }
+    }
+  }
+  .search__result--desktop {
+    @extend .search__result;
+    display: none;
+
+    @include u.breakpoint-up("tablet-landscape-up") {
+      max-width: 600px;
+      height: 450px !important;
+      right: 0;
     }
   }
 }
