create courses page, pagination styling and medium text styling

--- a/app/scss/components/_index.scss
+++ b/app/scss/components/_index.scss
@@ -5,6 +5,7 @@
 @forward "loading";
 @forward "list";
 @forward "mockups";
+@forward "pagination";
 @forward "path";
 @forward "progress";
 @forward "radio";
