--- a/app/scss/components/_btn.scss
+++ b/app/scss/components/_btn.scss
@@ -23,6 +23,20 @@
   }
 }
 
+.btn--flat {
+  outline: none;
+  border: none;
+  width: fit-content;
+  padding: 0.5em;
+  text-transform: uppercase;
+  color: var(--text-color);
+  background-color: transparent;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
 .cta--btn {
   align-items: center;
   background-color: var(--text-color);
@@ -31,14 +45,14 @@
   font-size: 18px;
   text-align: center;
 
-  .arrow-svg {
-    justify-self: flex-end;
-    height: 15px;
-    width: 20px;
-    background-color: var(--primary-color);
-    -webkit-mask: url("../asset/akar-icons_arrow-right.svg") no-repeat center;
-    mask: url("../asset/akar-icons_arrow-right.svg") no-repeat center;
-  }
+  // .arrow-svg {
+  //   justify-self: flex-end;
+  //   height: 15px;
+  //   width: 20px;
+  //   background-color: var(--primary-color);
+  //   -webkit-mask: url("../asset/akar-icons_arrow-right.svg") no-repeat center;
+  //   mask: url("../asset/akar-icons_arrow-right.svg") no-repeat center;
+  // }
 
   &:hover {
     background-color: var(--secondary-color);
@@ -76,3 +90,19 @@
   padding: 1em;
   background-color: var(--secondary-color);
 }
+
+// .pagination__btn--prev,
+// .pagination__btn--next {
+//   @extend .cta--btn;
+//   border-radius: 50%;
+//   border: none;
+//   padding: 0.5rem;
+// }
+
+// .arrow-svg {
+//   height: 15px;
+//   width: 20px;
+//   background-color: var(--secondary-color);
+//   -webkit-mask: url("../asset/akar-icons_arrow-right.svg") no-repeat center;
+//   mask: url("../asset/akar-icons_arrow-right.svg") no-repeat center;
+// }
